--- a/Converter/Views/Home/Index.cshtml
+++ b/Converter/Views/Home/Index.cshtml
@@ -9,34 +9,41 @@
     <h2>Convert text into specific format</h2>
     
 </div>
-<div>
+<div class="form-group">
     @using (Html.BeginForm("TryConvert", "Convert", FormMethod.Post))
     {
 
 
         @Html.DropDownListFor(m => m.ExpectedType,
                             new SelectList(Enum.GetValues(typeof(TypeConverter.TypeConverters))),
-                            "Select expected type")
+                            "Select expected type", new { @class = "form-control" })
 
 
         @Html.EditorFor(model => model.MyText, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.MyText, "", new { @class = "text-danger" })
 
-       
 
-        @*<button class="btn btn-default" type="submit" id="tryConvert" value="Try convert"
-                onclick="location.href='@Url.Action("TryConvert", "Convert")'">Try convert</button>*@
         <input type="submit" name="Upload" value="Try Convert" />
 
 
-       
+
 
 
 
     }
-
-    
 </div>
+
+
+
+
+       
+
+
+
+
+
+
+
 
 
 
